Creating the Post product endpoint with prometheus metric and validate the payload.
